--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@react-spring/web": "^9.7.3",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
