--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
+    "@use-gesture/react": "^10.3.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
