--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "react-use-measure": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
