--- a/package.json
+++ b/package.json
@@ -10,17 +10,12 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
-    "@tsparticles/all": "^3.2.2",
-    "@tsparticles/engine": "^3.2.2",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.2.2",
     "@use-gesture/react": "^10.3.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
-    "react-use-measure": "^2.1.1",
-    "tsparticles": "^3.2.2"
+    "react-use-measure": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
