--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@react-spring/web": "^9.7.3",
     "@use-gesture/react": "^10.3.0",
     "clsx": "^2.1.0",
