--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "@react-spring/web": "^9.7.3",
     "@use-gesture/react": "^10.3.0",
     "clsx": "^2.1.0",
+    "i18next": "^25.0.2",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "i18next-http-backend": "^3.0.2",
     "next": "14.1.0",
+    "next-i18next": "^15.4.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.5.1",
+    "react-markdown": "^10.1.0",
     "react-type-animation": "^3.2.0",
     "react-use-measure": "^2.1.1"
   },
